docroot/themes/custom/emulsifymars/components/02-molecules/card/recommendations-card/recommendations-card.scss
.recommendations-card {
  min-height: 520px;
  max-height: 520px;
  background-image: radial-gradient(
      circle at 50% 40%,
      clr(card-background) 10%,
      clr(subcolor-1)
  );
  border-radius: variable(card-border-radius);
  display: flex;
  flex-direction: column;
  position: relative;
  box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.1);
  margin-top: 3rem;
  margin-bottom: 6rem;
  @include card-width;
  
  @include xs{
  width: 25rem;
  }

  @include large {
    min-height: 39.7rem;
  }

  @include xl {
    min-height: 520px;
  }

  &__media {
    overflow: hidden;
    display: flex;
    align-items: center;
    position: absolute;
    bottom: 0;
    max-height: 31.8rem;
    height: 300px;
    width: 100%;
    box-sizing: border-box;
    justify-content: center;
    border-bottom-left-radius: variable(card-border-radius);
    border-bottom-right-radius: variable(card-border-radius);

    @include large {
      height: 204px;
    }

    @include xl {
      height: 300px;
    }
    
    img {
      width: 100%;
      height: 100%;
      object-fit: unset;
    }

    a {
      display: block;
      height: 100%;
      width: 100%;
    }
  }

  .badge {
    position: absolute;
    top: -3.5rem;
    right: -1.5rem;
    z-index: 2;

    @include xs{
      top: -6.6rem;
      right: -2rem;
    }
  }

  .recommendations-card-heading {
    padding-top: 2rem;
    margin: 0 0 2.8rem 0;
    flex-grow: unset;
    text-transform: uppercase;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-line-clamp: 3;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    min-height: 9rem;
    width: 100%
  }

  .details-button {
    flex-grow: 1;
    padding: 0 3rem;
  }

  &-heading__link {
    @include set-font($font-type: 'primary-font');

    color: clr(primary, card-title, recommendations-card-title);
    text-decoration: none;
    font-size: 2.2rem;
    line-height: 2.42rem;
    min-height: 5rem;
    display: block;
    padding: 0 3rem 0 2rem;
    font-weight: bold;
    width: 27rem;
  }

  &__labels_section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 3rem 3rem 3rem;
    flex-grow: 1;
  }

  &-items,
  &-time {
    @include set-font($font-type: 'secondary-font');

    color: clr(primary, card-title, recommendations-card-title);
    font-size: 1.6rem;
    line-height: 0.1rem;
    font-weight: bold;
  }

  &__details-button {
    .default-link {
      margin-left: 3rem;
      margin-bottom: 2.5rem;
    }
  }
}

